# formatly

./: .env.example  .gitignore  README.md  app.py  app_gemini.py  app_huggingface.py  config.py  pyproject.toml  requirements-api.txt  requirements.txt  spell_check.py
api/v1/: api.py
core/: api_clients.py  config.py  constants.py  formatter.py  spell_check.py  style_guides.py  validators.py
desktop/: GUI_pyside.py  GUI_webview.py  config.py  spell_check.py
desktop/backup_core/: api_clients.py  constants.py  formatter.py
desktop/interface/: app.js  index.html
desktop/utils/: auto_corrector.py  batch_processor.py  input_token_counter.py
utils/: README.md  __init__.py  api_key_manager.py  auto_correct.py  auto_corrector.py  batch_processor.py  dynamic_chunk_calculator.py  formatting_analyzer.py  gemini_corrector.py  input_token_counter.py  rate_limit_manager.py  spacing.py  text_classifier.py  track_changes.py
