[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "formatly"
version = "2.0.0"
description = "AI-powered academic document formatter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-docx",
    "google-generativeai",
    "python-dotenv",
    "FastAPI",
    "uvicorn",
    "PySide6",
    "json5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*", "desktop*"]
